crates/plotnik-lib/tests/05-typegen/quantifiers/error_quantified_named_node_capture_needs_row.txt
Bad = (array (identifier) @name)*
==== diagnostics ====
error: quantifier `*` contains captures (`@name`) but has no struct capture
 --> query.ptk:1:7
  |
1 | Bad = (array (identifier) @name)*
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: add a struct capture: `{...}* @name`
